fix dark mode

--- a/src/components/DailyNormaModal/DailyNormaModal.module.css
+++ b/src/components/DailyNormaModal/DailyNormaModal.module.css
@@ -5,6 +5,7 @@ textarea {
   line-height: calc(1.25);
   padding: 11px 10px;
   color: var(--primary-blue);
+  background-color: var(--background);
   border: 1px solid var(--secondary-blue);
   border-radius: 6px;
   width: 100%;
@@ -37,7 +38,7 @@ input::placeholder {
   max-width: 704px; /* Задаємо максимальну ширину */
   padding: 24px 12px;
   border-radius: 10px;
-  background: var(--bg-light);
+  background: var(--background);
   overflow-y: auto; /* Прокручування, якщо вміст більше */
   max-height: 90vh; /* Максимальна висота для великих екранів */
   z-index: 1000; /* Встановлюємо високий z-index */
@@ -85,9 +86,9 @@ input::placeholder {
   cursor: pointer;
 }
 
-.buttonClose {
+/* .buttonClose {
   background: var(--bg-light);
-}
+} */
 
 .formulaContainer {
   display: flex;
@@ -197,7 +198,7 @@ input::placeholder {
 
   input[type='radio']:checked + div {
     background-color: var(--primary-blue);
-    box-shadow: inset 0 0 0 3px white;
+    box-shadow: inset 0 0 0 3px var(--background);
   }
 
   span {
@@ -274,7 +275,8 @@ input::placeholder {
 .saveButton {
   border-radius: 10px;
   background: var(--primary-blue);
-  box-shadow: 0px 4px 8px 0px rgba(64, 123, 255, 0.34);
+  /* box-shadow: 0px 4px 8px 0px rgba(64, 123, 255, 0.34); */
+  box-shadow: var(--box-shadow-3);
   color: var(--bg-light);
   text-align: center;
   font-size: 16px;
